@@ -1,4 +1,4 @@
 #Ibator build version info
-#Tue Feb 03 20:33:04 CST 2009
+#Wed Feb 04 16:05:31 CST 2009
 version=1.2.2
-buildNum=703
+buildNum=707
