@@ -20,6 +20,8 @@
 <h3>Bugs Fixed</h3>
 <ul>
   <li>NPE when no DAOs are generated.</li>
+  <li>IBATIS-579 - Don't allow column names that contain spaces to
+      break across lines in generated XML.</li>
 </ul>
 
 <h3>Enhancements</h3>
